--- a/study-reactive/pom.xml
+++ b/study-reactive/pom.xml
@@ -7,12 +7,45 @@
   <version>1.0-SNAPSHOT</version>
   <name>study-reactive</name>
   <url>http://maven.apache.org</url>
+    <parent>
+    <groupId>com.blu.reactive</groupId>
+    <artifactId>reactive-app</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+    </dependency>
+    <!--Hystrix reactive -->
+    <dependency>
+      <groupId>com.netflix.hystrix</groupId>
+      <artifactId>hystrix-core</artifactId>
+      <version>1.4.12</version>
+      <!--<scope>compile</scope>-->
+    </dependency>
+    <dependency>
+      <groupId>io.reactivex</groupId>
+      <artifactId>rxjava</artifactId>
+      <version>1.0.7</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.0</version>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.1.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-client</artifactId>
+      <version>1.8</version>
     </dependency>
   </dependencies>
 </project>
