--- a/reactive-rest/pom.xml
+++ b/reactive-rest/pom.xml
@@ -53,11 +53,16 @@
       <artifactId>logback-classic</artifactId>
       <version>1.1.3</version>
     </dependency>
+    <dependency>
+      <groupId>com.netflix.hystrix</groupId>
+      <artifactId>hystrix-metrics-event-stream</artifactId>
+      <version>1.4.12</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>reactive-rest</finalName>
     <plugins>
-        <plugin>
+        <!--<plugin>
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>maven-jetty-plugin</artifactId>
             <version>6.1.26</version>
@@ -79,6 +84,19 @@
                     <version>1.1.1</version>
                 </dependency>
             </dependencies>
+        </plugin>-->
+        <plugin>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-maven-plugin</artifactId>
+            <version>9.3.0.v20150612</version>
+            <configuration>
+                <!--<jettyXml>/Users/shamim/Development/workshop/github/reactive/reactive-rest/target/classes/jetty.xml</jettyXml>-->
+                <scanIntervalSeconds>10</scanIntervalSeconds>
+                <webApp>
+                    <contextPath>/test</contextPath>
+                </webApp>
+
+            </configuration>
         </plugin>
     </plugins>
   </build>
