--- a/reactive-rest/pom.xml
+++ b/reactive-rest/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>reactive-app</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <groupId>com.blu.rest</groupId>
+  <groupId>com.blu.reactive</groupId>
   <artifactId>reactive-rest</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
